Added about section 3-d and color pallete

--- a/fjc-webapp/src/app/globals.css
+++ b/fjc-webapp/src/app/globals.css
@@ -4,23 +4,18 @@
   --color-color-1: #033738;
   --color-color-2: #224d02;
   --color-color-3: #FF776F;
-  --color-color-4: #388004;
-  --color-color-5: #858DFF;
-  --color-color-6: #03112d;
-  --color-stroke-1: #26242C;
-  --color-n-1: #FFFFFF;
-  --color-n-2: #CAC6DD;
-  --color-n-3: #ADA8C3;
-  --color-n-4: #757185;
-  --color-n-5: #1c1d1c;
-  --color-n-6: #252134;
-  --color-n-7: #0B1901;
-  --color-n-8: #1c1d1c;
-  --color-n-9: #474060;
-  --color-n-10: #43435C;
-  --color-n-11: #1B1B2E;
-  --color-n-12: #2E2A41;
-  --color-n-13: #6C7275;
+  --color-n-1: #0A100D;
+  --color-n-2: #B9BAA3;
+  --color-n-3: #D6D5C9;
+  --color-n-4: #A22C29;
+  --color-n-5: #902923;
+  --color-n-6: #F4FFF8;
+  /* --color-n-1: #000F08;
+  --color-n-2: #1C3738;
+  --color-n-3: #4D4847;
+  --color-n-4: #F4FFF8;
+  --color-n-5: #8BAAAD;
+  --color-n-6: #F4FFF8; */
   --letter-spacing-tagline: .15em;
   --spacing-0\.5: 0.0625rem;
   --spacing-7\.5: 1.875rem;
