Finished styling and added timeline

--- a/fjc-webapp/src/app/globals.css
+++ b/fjc-webapp/src/app/globals.css
@@ -3,7 +3,7 @@
 @theme {
   --color-color-1: #033738;
   --color-color-2: #C4A582;
-  --color-color-3: #FF776F;
+  --color-color-3: #014D4E;
   --color-n-1: #0A100D;
   --color-n-2: #B9BAA3;
   --color-n-3: #D6D5C9;
